<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifsul.bruno.pdm_5n1_trabalho_editora.Main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_title"
            android:id="@+id/lbl_welcome"
            android:textSize="14pt"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_titulo"
            android:id="@+id/lbl_title"
            android:textSize="12pt"
            android:layout_marginTop="10pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_title"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_autor"
            android:id="@+id/textView"
            android:textSize="12pt"
            android:layout_marginTop="10pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_autor"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ano"
            android:inputType="number"
            android:id="@+id/lbl_year"
            android:textSize="12pt"
            android:layout_marginTop="10pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_ano"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cadastrar"
            android:id="@+id/btn_cadastrar"
            android:onClick="cadastrar"
            android:backgroundTint="#5cb85c"
            android:textColor="#ffffff"
            android:textSize="8pt" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_limpar"
            android:id="@+id/btn_limpar"
            android:onClick="limpar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#e6e6e6"
            android:textSize="8pt" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_list"
            android:id="@+id/button"
            android:onClick="listar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#5bc0de"
            android:textSize="8pt"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>
